--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
             <div class="avatar">
                 <!-- Avatar image -->
                 <img class="avatar__image" src="dice.png" />
-        </header>
+        </div>
+            </header>
         <div class="Hi">
             <h1>Hi!</h1>
         </div>
@@ -51,6 +52,9 @@
         </div>
         <div class="wrapper">
             <div class="box box1"></div>
-        </div>   
+        </div>
+        <div class="jake">
+            <img src="jake.jpg">
+        </div>
     </body>
 </html>
